# Tetris

./: .gitignore  CMakeLists.txt  README.md  update-structure.ps1
Core/Inc/: Colors.h  Config.h  Game.h  GameState.h  Grid.h  Shape.h
Core/Src/: Config.cpp  Game.cpp  Grid.cpp  Shape.cpp
Scripts/: update-structure.ps1
